force-app/main/default/objects/Property_Interest__c.object
<CustomObject>
    <description>Properties, rights or easements/deed restrictions related to management units in Property Management.</description>
    <fields>
        <fullName>APN_s_Affected_by_Williamson_Act__c</fullName>
        <description>Moved from PMU level 3/1/17</description>
        <inlineHelpText>Please enter in the APN&apos;s affected by the Williamson Act contract.</inlineHelpText>
        <label>APN&apos;s Affected by Williamson Act</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Annual_Welfare_Exemptions_Applied_For__c</fullName>
        <inlineHelpText>Please select all the tax years this property has filed welfare exemptions. You may select more than one year. And attach the annual exemption filings to the &quot;Notes &amp; Attachments&quot; section of the property management record.</inlineHelpText>
        <label>Annual Welfare Exemptions Applied  For</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2008</fullName>
                </value>
                <value>
                    <fullName>2009</fullName>
                </value>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assessor_Parcel_Numbers__c</fullName>
        <inlineHelpText>Please include the current - active APN&apos;s for the property.</inlineHelpText>
        <label>Assessor Parcel Numbers</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Atlas_URL__c</fullName>
        <description>https://docs.google.com/document/d/1Uj1bIjSpOId2WmFTqZKEq2aAHSYLXEj0xomnNdIZBoQ/edit</description>
        <formula>&apos;https://atlas.codefornature.org/#/topo-vector/&apos;&amp;Zoom_Level__c&amp;&apos;/10111415161719202122232430313435990504030807/08/&apos;&amp;IF(GIS_Object_ID__c &lt;&gt; null, GIS_Object_ID__c, &apos;null&apos;)&amp;&apos;/&apos;&amp;Mean_Longitude__c&amp;&apos;/&apos;&amp;Mean_Latitude__c</formula>
        <inlineHelpText>URL to Conservation Atlas.</inlineHelpText>
        <label>Atlas URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefits_of_Holding_Long_Term__c</fullName>
        <inlineHelpText>If holding long term, select one or more of the conservation benefits or reasons for holding this interest long term.</inlineHelpText>
        <label>Benefits of Holding Long Term</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Place-Based Conservation/Stewardship</fullName>
                </value>
                <value>
                    <fullName>Systemic Change/Transformation</fullName>
                </value>
                <value>
                    <fullName>Philanthropic</fullName>
                </value>
                <value>
                    <fullName>Connect People &amp; Nature</fullName>
                </value>
                <value>
                    <fullName>Legal Obligation</fullName>
                </value>
                <value>
                    <fullName>Reputational Risk</fullName>
                </value>
                <value>
                    <fullName>Other TNC Benefits</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CLS_MABR_ID__c</fullName>
        <inlineHelpText>Monitoring unit ID from CLS (old legal system of record for real estate). Used on Easement and Deed Restriction interests. The fee MABR ID is stored on the Property Management record.</inlineHelpText>
        <label>CLS MABR ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLS_Tract_ID__c</fullName>
        <description>CLS Tract IFMS ID field - Duplicate, deprecating KSA 2018-11-20</description>
        <inlineHelpText>In CLS each tract record has a unique number.</inlineHelpText>
        <label>XDeprecated: CLS Tract ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLS_Tract_IFMS_ID__c</fullName>
        <inlineHelpText>In CLS each interest has an ID # called a Tract IFMS #.  Please enter the IFMS number or numbers if more than one is included in this property interest.</inlineHelpText>
        <label>CLS Tract IFMS ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLS_Tract_Name__c</fullName>
        <description>CLS tract name</description>
        <inlineHelpText>Legal Link tract name. Please enter all tract names separated by commas if more than one is included in this property interest.</inlineHelpText>
        <label>Legal Link Tract Name</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CT_Interest_ID__c</fullName>
        <description>Interest ID from Conservation Track. Used for Conversion process. Not on any layouts.</description>
        <externalId>true</externalId>
        <label>CT Interest ID</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CT_Monitor__c</fullName>
        <description>Importing the Last Monitor assigned from Conservation Track</description>
        <label>CT Monitor</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cash_or_Share_Percentage__c</fullName>
        <label>Cash or Share Percentage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Share</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Component_Tracts__c</fullName>
        <description>To hold info in the &quot;Component Tracts and Acres&quot; field from Conservation Track</description>
        <inlineHelpText>If there are multiple tracts included in this interest, please indicate the names and acreage of each.</inlineHelpText>
        <label>Component Tracts</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contiguous_with_other_protected_lands__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Added for easements and deed restrictions 4/20/17.</description>
        <inlineHelpText>Check if this property is contiguous with other protected lands and describe in description field.</inlineHelpText>
        <label>Contiguous with other protected lands?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>County_Global__c</fullName>
        <inlineHelpText>Select the county or counties where the property interest lies.</inlineHelpText>
        <label>County</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>County</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Create_Box_Folders__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Creates box folders via process builder/apex. Primary References, Monitoring Documentation, and Older Monitoring Reports.</inlineHelpText>
        <label>Create Box Folders</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_Report_Date__c</fullName>
        <defaultValue>TODAY()+7</defaultValue>
        <description>Date to automatically create the next monitoring report.  Field not visible on any layouts.  Used by workflow and process to create monitoring reports.</description>
        <label>Create Report Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Create_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox will be checked by a workflow triggered by the Create Report date.  The checkbox will trigger the process that creates the monitoring reports.</description>
        <label>Create Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_Subdivisions__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Used by the process to create subdivisions when the subdivision number is first changed to more than 1.</description>
        <inlineHelpText>Check to create the subdivision(s) for a new owner(s) after you enter the new number of subdivisions above and check to be sure &quot;Subdivision Permitted&quot; in Rights and Restrictions section is &quot;yes&quot;.  When saved, the subdivisions will be created.</inlineHelpText>
        <label>Create Subdivisions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Uses__c</fullName>
        <description>Created 4/19/17 for easements and deed restrictions.</description>
        <inlineHelpText>Select all applicable uses on the property under easement or deed restriction.  If other, describe in description field.</inlineHelpText>
        <label>Current Uses</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ecosystem/Species Preservation</fullName>
                </value>
                <value>
                    <fullName>Scientific Research</fullName>
                </value>
                <value>
                    <fullName>Environmental Education</fullName>
                </value>
                <value>
                    <fullName>Recreation</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Grazing</fullName>
                </value>
                <value>
                    <fullName>Forestry</fullName>
                </value>
                <value>
                    <fullName>Residential</fullName>
                </value>
                <value>
                    <fullName>Commercial/Industrial</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Acquired__c</fullName>
        <inlineHelpText>Please enter the date TNC acquired the interest and attach a copy of the closing memo, grant agreements and information regarding restrictions on transfer to the &quot;Notes &amp; Attachments&quot; section of the property interest record.</inlineHelpText>
        <label>Date Acquired</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Interest_Transferred_Out__c</fullName>
        <inlineHelpText>Enter the actual date that this interest was transferred or conveyed to another entity. If conveying a fee property but retaining a conservation easement, create a new property interest for the conservation easement.</inlineHelpText>
        <label>Date Interest Transferred Out</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Lease_Expires__c</fullName>
        <label>Xdeprecated: Date Lease Expires</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Lease_Signed__c</fullName>
        <label>Xdeprecated: Date Lease Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Describe_Access_to_Property__c</fullName>
        <description>Text field for access to specific property within Property Management Unit.</description>
        <inlineHelpText>Describe the access to the specific property within Property Management Unit.</inlineHelpText>
        <label>Describe Access to Property</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Describe_Large_Conservation_Effort__c</fullName>
        <description>Added on 4/20/17 for easements and deed restrictions.</description>
        <inlineHelpText>If this property is part of a larger conservation effort, please describe here.</inlineHelpText>
        <label>Describe larger conservation effort:</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Describe_Long_Term_Holding_Benefits__c</fullName>
        <inlineHelpText>If holding long term, select the benefits categories above and describe here.</inlineHelpText>
        <label>Describe Long Term Holding Benefits</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Describe_Other_Uses__c</fullName>
        <description>Added 4/19/17 for easements and deed restrictions</description>
        <inlineHelpText>Describe any other uses of the land protected by the easement or deed restriction.</inlineHelpText>
        <label>Describe Other Uses</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Describe_Permitted_Activities__c</fullName>
        <description>Added 4/19/17 for easements and deed restrictions.</description>
        <inlineHelpText>Describe any other permitted uses and any collections permitted.</inlineHelpText>
        <label>Describe Other Permitted Activities</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Describe_contiguous_lands__c</fullName>
        <description>for easements and deed restrictions 4/20/17</description>
        <inlineHelpText>If this property is contiguous with other protected lands, please describe here.</inlineHelpText>
        <label>Describe contiguous protected lands:</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Distance__c</fullName>
        <formula>DISTANCE(GEOLOCATION(Latitude_Lower_Left__c,Longitude_Lower_Left__c),GEOLOCATION(Latitude_Upper_Right__c,Longitude_Upper_Right__c),&apos;km&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Distance between the lower left and upper right points of the tract&apos;s extent.</inlineHelpText>
        <label>Distance</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Enrolled_in_Irrigated_Ag_Waiver_Program__c</fullName>
        <description>Moved to Property Interest level from PMU on 3/1/17</description>
        <inlineHelpText>If property contains irrigated agricultural lands that discharge irrigation water or storm water into surface waters, you either need to get a discharge permit or enroll in a waiver program.</inlineHelpText>
        <label>Enrolled in Irrigated Ag Waiver Program?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Tenant Enrolled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expected_Date_of_Transfer__c</fullName>
        <description>Moved from PMU 3/1/17</description>
        <inlineHelpText>If there is a take-out plan for this property interest, enter the expected date of transfer or sale.</inlineHelpText>
        <label>Expected Date of Transfer/Sale</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Reporting_Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Moved to related object External Reporting Agency -Created for Easements and Deed Restrictions</description>
        <inlineHelpText>Select the agency to whom we are required to report or who is required to report to us on easements or deed restrictions.If you cannot find the agency name, try acronyms or other spellings OR create a new account.</inlineHelpText>
        <label>XDEPRECATE_External Reporting Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Property Interests (External Reporting Agency)</relationshipLabel>
        <relationshipName>Property_Interests7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Reporting__c</fullName>
        <description>Moved to related object: External Reporting Agency-Created for Easements and deed restrictions</description>
        <inlineHelpText>Choose &quot;Required&quot; if external reporting required, Requested&quot; if funder wants but we are not obligated. &quot;Completed&quot; if we had reporting required for a period and we have completed that period, &quot;Required to TNC&quot; if a 3rd party is required to report to us.</inlineHelpText>
        <label>Xdeprecate_External Reporting?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Required</fullName>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Required to TNC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSA_Farm_Tract_Number__c</fullName>
        <inlineHelpText>If property has agricultural activity, obtain Farm/Tract numbers from county USDA Farm Service Agency office.</inlineHelpText>
        <label>FSA/Farm Tract Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Report_Date__c</fullName>
        <inlineHelpText>Date of first monitoring/inspection report.</inlineHelpText>
        <label>First Report Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Funder_Visit_Notes__c</fullName>
        <description>Created to convert data from CT.  Intent is for funder visit invitations and funder communications to be tracked through activities.</description>
        <inlineHelpText>Enter any miscellaneous notes about funder visit scheduling.  You may log email and phone contacts through activities related list below and schedule reminders through tasks.</inlineHelpText>
        <label>Funder Visit Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Funding_Org_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the contact within the funding organization.</inlineHelpText>
        <label>Funding Org Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Property Interests (Funding Org Contact)</relationshipLabel>
        <relationshipName>Property_Interests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Funding_Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the name of the funding organization if we maintain obligations to that organization related to this interest.</inlineHelpText>
        <label>Funding Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Property Interests (Funding Organization)</relationshipLabel>
        <relationshipName>Property_Interests5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GIS_Object_ID__c</fullName>
        <inlineHelpText>Id of the tract in the Conservation Atlas. Used for creating the url for the &apos;View in Atlas&apos; button.</inlineHelpText>
        <label>GIS Object ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Restrictions__c</fullName>
        <description>Moved from PMU 4/11/17</description>
        <inlineHelpText>Provide a summary of grant funding restrictions that were placed on the property and attach a copy of the grant agreement or restrictions to the &quot;Notes &amp; Attachments&quot; section.</inlineHelpText>
        <label>Grant Restrictions</label>
        <length>3200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Grazing_Allotment_Acres__c</fullName>
        <description>2/28/17 - Created on Property Interest and will remove from PMU level.</description>
        <inlineHelpText>If applicable, enter in the number of acres the BLM grazing allotment allows.</inlineHelpText>
        <label>Grazing Allotment Acres</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grazing_Allotment_Details__c</fullName>
        <inlineHelpText>If applicable, enter the name of the grazing lease issuing entity and the lease details, e.g., pasture, number of livestock, grazing period beginning - end, AUMS, etc.</inlineHelpText>
        <label>Grazing Allotment Details</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grazing_Allotment_Name__c</fullName>
        <description>2/28/17 - Created on Property Interest level and will remove from PMU level.</description>
        <inlineHelpText>If applicable, enter the name of the grazing allotment. The name of grazing allotment can be obtained by using BLM&apos;s GeoCommunicator rangeland mapping system to locate the allotment.http://www.geocommunicator.gov/GeoComm/</inlineHelpText>
        <label>Grazing Allotment Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grazing_Allotment_Permit_Number__c</fullName>
        <description>2/28/17 Created on Property Interest Level and will remove from PMU Level</description>
        <inlineHelpText>If applicable, enter the grazing allotment permit number. Allotment permits are issued by BLM to graze livestock on public lands. Use BLM&apos;s GeoCommunicator rangeland mapping system to locate the permit number. http://www.geocommunicator.gov/GeoComm/</inlineHelpText>
        <label>Grazing Allotment Permit Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grazing_Evaluated_By__c</fullName>
        <inlineHelpText>Who evaluated the grazing activity to determine if it falls within the limits?  
(If  &quot;other&quot; describe in the Grazing Limits Description field.)</inlineHelpText>
        <label>Grazing Evaluated By:</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>TNC Staff Only</fullName>
                </value>
                <value>
                    <fullName>TNC Staff with Seasonal Help</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grazing_Limit_Descriptions__c</fullName>
        <description>For easements</description>
        <inlineHelpText>Please describe the grazing limits identified in the limit type field.  Include type of animal allowed, seasonal date restrictions, and identify restricted areas. Include any terms that limit use such as placement of minerals or supplemental feed, etc</inlineHelpText>
        <label>Grazing Limit Descriptions</label>
        <length>3200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Grazing_Limit_Types__c</fullName>
        <inlineHelpText>Please select all limit types that apply to the grazing on this easement. If other describe.</inlineHelpText>
        <label>Grazing Limit Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RDM</fullName>
                </value>
                <value>
                    <fullName>Seasonal</fullName>
                </value>
                <value>
                    <fullName>Animal Type</fullName>
                </value>
                <value>
                    <fullName>Specified Areas</fullName>
                </value>
                <value>
                    <fullName>AUM</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>None Identified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grazing_Permitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For easements</description>
        <inlineHelpText>Check the box if grazing is permitted and note any limits in the fields below.</inlineHelpText>
        <label>Grazing Permitted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IRS_Reportable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For easements</description>
        <inlineHelpText>Is this a conservation easement reportable to the IRS under SOP?  Check if &quot;Yes&quot;.</inlineHelpText>
        <label>IRS Reportable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Welfare_Exemption_Applied_For__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>A welfare exemption is an exemption from real property taxes. Check the box for yes. If not checked, you must provide an explanation in the narrative field below. If checked, please attach the initial exemption filing to the &quot;Notes &amp; Attachments&quot; section.</inlineHelpText>
        <label>Initial Welfare Exemption Applied For?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interest_Notes__c</fullName>
        <description>Created to house the Misc. Notes field from CT.</description>
        <inlineHelpText>Enter any general or miscellaneous notes related to this property interest and/or a general description of the interest.</inlineHelpText>
        <label>Interest Notes</label>
        <length>3200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Interest_Overlaid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If you have indicated that this overlays another interest, please indicate which interest that it overlays. The interest indicated here will be the primary interest that shows up in the Conservation Atlas maps.</inlineHelpText>
        <label>Interest Overlaid</label>
        <referenceTo>Property_Interest__c</referenceTo>
        <relationshipLabel>Property Interests (Interest Overlaid)</relationshipLabel>
        <relationshipName>Property_Interests_Overlay</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interests_Held_by_Others__c</fullName>
        <description>Please describe other significant interests held by other parties such as prescriptive easements, water rights, etc.</description>
        <inlineHelpText>Please describe other significant interests held by other parties such as prescriptive easements, water rights, etc.</inlineHelpText>
        <label>Interests Held by Others</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Funding_Agency_Visit__c</fullName>
        <description>Created for easements and deed restrictions.</description>
        <inlineHelpText>Last date that funding agency attended a monitoring visit.</inlineHelpText>
        <label>Last Funding Agency Visit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Monitoring_Date__c</fullName>
        <description>Created for Easements and deed restrictions</description>
        <inlineHelpText>Date of most recent completed and approved monitoring report on this interest.</inlineHelpText>
        <label>Last Monitoring Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latitude_Lower_Left__c</fullName>
        <inlineHelpText>Latitude value for the lower left corner of the tract&apos;s extent.</inlineHelpText>
        <label>Latitude (Lower Left)</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latitude_Upper_Right__c</fullName>
        <inlineHelpText>Latitude value for the Upper Right corner of the tract&apos;s extent.</inlineHelpText>
        <label>Latitude (Upper Right)</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lease_Description__c</fullName>
        <description>Refer to individual lease contracts</description>
        <label>Xdeprecated:_Lease Description</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Legal_Link_MU_ID__c</fullName>
        <inlineHelpText>Legal Link Monitoring Unit ID number (easements and deed restrictions are monitored individually, so the monitoring unit ID is located on the interest level, for fees this number is located on the property management record associated with this interest).</inlineHelpText>
        <label>Legal Link Monitoring Unit ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Link_Monitoring_Unit_Name__c</fullName>
        <description>Last updated 4/17/18</description>
        <inlineHelpText>Name of monitoring unit according to Legal Link</inlineHelpText>
        <label>Legal Link Monitoring Unit Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Link_Tract_ID_Number__c</fullName>
        <description>The 7 digit Legal Link ID number.  Will replace the CLS MABR?ifma Numbers.  Interests acquired after 1/31/18 will have only the Legal Link ID #.  Other active interests will maintain their old CLS # and will eventually be assigned a new Legal Link #,</description>
        <inlineHelpText>Tract ID from Legal Link.</inlineHelpText>
        <label>Legal Link Tract ID</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Longitude_Lower_Left__c</fullName>
        <inlineHelpText>Longitude value for the lower left corner of the tract&apos;s extent.</inlineHelpText>
        <label>Longitude (Lower Left)</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Longitude_Upper_Right__c</fullName>
        <inlineHelpText>Longitude value for the upper right corner of the tract&apos;s extent.</inlineHelpText>
        <label>Longitude (Upper Right)</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MDFolderID__c</fullName>
        <inlineHelpText>Box ID for Monitoring Documentation folder</inlineHelpText>
        <label>Monitoring Documentation Folder ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MRFolderID__c</fullName>
        <inlineHelpText>Box ID for Reports Archive Folder</inlineHelpText>
        <label>Reports Archive Folder ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Managing_Entity_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the contact within the organization the manages the property itnerest.</inlineHelpText>
        <label>Managing Entity Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Property Interests (Managing Entity Contact)</relationshipLabel>
        <relationshipName>Property_Interests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Map_Extent_X_Max__c</fullName>
        <description>Used for creating the Map URLs for Deals and Property Interests</description>
        <label>Map Extent (X-Max)</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Map_Extent_X_Min__c</fullName>
        <description>Used for creating the Map URLs for Deals and Property Interests</description>
        <label>Map Extent (X-Min)</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
</CustomObject>